[gd_scene load_steps=30 format=3 uid="uid://l5ic445kl6da"]

[ext_resource type="Script" path="res://assets/scripts/enemies/enemy.gd" id="1_0vklg"]
[ext_resource type="Resource" uid="uid://bimn8sgkvl2o3" path="res://assets/data/enemies/goblin.tres" id="2_1c58a"]
[ext_resource type="Texture2D" uid="uid://c63k7jadehpp7" path="res://assets/sprites/dungeon/goblin_.png" id="4_c6iyo"]
[ext_resource type="PackedScene" uid="uid://ydoamsvkvmjd" path="res://scenes/components/health_component.tscn" id="5_awlvx"]
[ext_resource type="PackedScene" uid="uid://c5oj53s80lw1c" path="res://scenes/components/hitbox.tscn" id="5_h3vuw"]
[ext_resource type="Script" path="res://assets/scripts/components/movement_component.gd" id="6_8upb2"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_state_machine.gd" id="7_8pbow"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_exploring_state.gd" id="8_0refy"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_dead_state.gd" id="9_86ol2"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_fighting_state.gd" id="10_ojrjy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b577t"]
atlas = ExtResource("4_c6iyo")
region = Rect2(0, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ygpp"]
atlas = ExtResource("4_c6iyo")
region = Rect2(24, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_diima"]
atlas = ExtResource("4_c6iyo")
region = Rect2(48, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptxqf"]
atlas = ExtResource("4_c6iyo")
region = Rect2(72, 120, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_psauy"]
atlas = ExtResource("4_c6iyo")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vny8"]
atlas = ExtResource("4_c6iyo")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdsye"]
atlas = ExtResource("4_c6iyo")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkmoy"]
atlas = ExtResource("4_c6iyo")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttq7v"]
atlas = ExtResource("4_c6iyo")
region = Rect2(0, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn7ii"]
atlas = ExtResource("4_c6iyo")
region = Rect2(24, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8mp"]
atlas = ExtResource("4_c6iyo")
region = Rect2(48, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32ee"]
atlas = ExtResource("4_c6iyo")
region = Rect2(72, 96, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dnwc"]
atlas = ExtResource("4_c6iyo")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vylwq"]
atlas = ExtResource("4_c6iyo")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j8wk"]
atlas = ExtResource("4_c6iyo")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvm8q"]
atlas = ExtResource("4_c6iyo")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8l4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b577t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ygpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diima")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptxqf")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psauy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdsye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkmoy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttq7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn7ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32ee")
}],
"loop": false,
"name": &"receive_damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dnwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vylwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j8wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvm8q")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qa6ns"]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mhtg0"]
radius = 5.0
height = 14.0

[node name="Goblin" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 7
script = ExtResource("1_0vklg")
data = ExtResource("2_1c58a")

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_s8l4v")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qa6ns")
debug_color = Color(0.917647, 0.0392157, 0.0352941, 0.419608)

[node name="Hitbox" parent="." node_paths=PackedStringArray("character") instance=ExtResource("5_h3vuw")]
collision_layer = 64
collision_mask = 32
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_mhtg0")
debug_color = Color(0.917647, 0.0392157, 0.0352941, 0.419608)

[node name="AttackRange" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(20, 0)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0

[node name="HealthComponent" parent="." node_paths=PackedStringArray("character_sprite", "character") instance=ExtResource("5_awlvx")]
unique_name_in_owner = true
character_sprite = NodePath("../Animations")
character = NodePath("..")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("character", "character_sprite")]
script = ExtResource("6_8upb2")
character = NodePath("..")
character_sprite = NodePath("../Animations")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_8pbow")
initial_state = NodePath("EnemyExploringState")

[node name="EnemyExploringState" type="Node" parent="StateMachine"]
script = ExtResource("8_0refy")

[node name="EnemyDeadState" type="Node" parent="StateMachine"]
script = ExtResource("9_86ol2")

[node name="DeathTimer" type="Timer" parent="StateMachine/EnemyDeadState"]

[node name="EnemyFightingState" type="Node" parent="StateMachine"]
script = ExtResource("10_ojrjy")

[node name="AttackCooldownTimer" type="Timer" parent="StateMachine/EnemyFightingState"]
one_shot = true

[node name="AttackTimer" type="Timer" parent="StateMachine/EnemyFightingState"]
one_shot = true

[connection signal="timeout" from="StateMachine/EnemyDeadState/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StateMachine/EnemyFightingState/AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="StateMachine/EnemyFightingState/AttackTimer" to="StateMachine/EnemyFightingState" method="handle_attack"]
